data/derived/comb/progs/unify/prog6232.ml.out
Characters 55-66:
  let rec digitsOfInt n = if n < 0 then print_int 0 else print_int n / 10; digitsOfInt (n / 10);;
                                                         ^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         int
